--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/scroll-home.css">
 {{#unless isLoggedIn}}
 <div id="popupDiv" class="home-popup flex">
     <div class="popup-top flex">
