--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -7,6 +7,7 @@ footer{
     font-size: 2em;
     background-color: rgba(255, 255, 255, 0.7);
     border-top: 4px dotted black;
+    margin-top: 2rem;
 }
 
 footer p{
