--- a/views/user.hbs
+++ b/views/user.hbs
@@ -14,6 +14,7 @@
             </div>
             <div class="user-main-wishlist">
                 <h3>Wishlist</h3>
+                {{> searchBar}}
                 <ul>
                     {{#each currentUser.wishlist}}
                     <li><a href="/country/{{currentUser._id}}">{{currentUser.name}}</a></li>
