--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script type="module" src="/js/client.js"></script>
     <script type="module" src="/js/main.js"></script>
+     {{#each js}}
+    <script src="/js/{{this}}.js" type="module"></script>
+    {{/each}}
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="text/javascript" src="/js/mapdata.js"></script>		
 <script  type="text/javascript" src="/js/worldmap.js"></script>
