--- a/views/partials/searchBar.hbs
+++ b/views/partials/searchBar.hbs
@@ -1,10 +1,10 @@
-<div id="quick-search">
+<div class="quick-search">
     <form action="" method="post">
-        <input type="text" name="search-bar" id="search-bar">
+        <input type="text" name="search-bar" class="search-bar" id="search-bar">
     </form>
     <label for="search-bar">Quick Search a Country:</label>
 
-    <datalist id="country-results" style="display: block">
+    <datalist class="country-results" style="display: block">
     
     </datalist>
 </div>
