starting the day right

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,7 +16,7 @@
 </div>
 {{/unless}}
 <section class="home-page flex">
-    <div>
+    <div class="home-search">
         {{> searchBar}}
     </div>
     <div id="map"></div>
