--- a/views/partials/searchBar.hbs
+++ b/views/partials/searchBar.hbs
@@ -1,10 +1,7 @@
-<div id="quick-search">
-    <form action="" method="post">
+<div id="quick-search flex">
+    <form action="" method="post" autocomplete="off">
+        <label for="search-bar">Search :</label>
         <input type="text" name="search-bar" id="search-bar">
     </form>
-    <label for="search-bar">Quick Search a Country:</label>
-
-    <datalist id="country-results" style="display: block">
-    
-    </datalist>
+    <datalist id="country-results"></datalist>
 </div>
