--- a/views/guide.hbs
+++ b/views/guide.hbs
@@ -4,7 +4,7 @@
         <div class="guide-item">
             <article class="guide-article step1 flex">
                 <div class="guide-img">
-
+                    <img src="/assets/step1.png" alt="World Map">
                 </div>
                 <div class="guide-text">
                     This is a map (duh). If you're signed in, you can make it nicer with the countries you've visited / put in your wishlist ! You can zoom in and out, how nice is that ? And if you click on a country...
@@ -14,7 +14,7 @@
         <div class="guide-item">
             <article class="guide-article step2 flex">
                 <div class="guide-img">
-                    
+                    <img src="/assets/step2.png" alt="Country Page">
                 </div>
                 <div class="guide-text">
                     Boom ! You end up on this beautiful page, where you can gather crucial information such as currency and flag. You can also have a look at exclusive tips (and even filter them, yeah that's right).
