--- a/public/css/guide.css
+++ b/public/css/guide.css
@@ -1,17 +1,29 @@
 .guide-article{
     flex-direction: row;
-    margin-bottom: 3rem;
+    margin: 1.5rem 0;
     display: none;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 .guide-img{
     width: 30%;
+    box-sizing: border-box;
+    height: auto;
+}
+
+.guide-img img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 2em;
+    border: 1px solid black;
 }
 
 .guide-text{
-    width: 60%;
+    width: 40%;
+    line-height: 1.8em;
+    text-align: center;
 }
 
 @media screen and (max-width: 900px){
@@ -21,6 +33,5 @@
 
     .guide-text{
         width: 100%;
-        text-align: center;
     }
 }
