--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -17,7 +17,10 @@
     width: 150px;
     padding: 5px 10px;
     background: none;
-    font-size: 1em;
+    font-size: 0.8em;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 .signin-form button{
