--- a/views/partials/searchBar.hbs
+++ b/views/partials/searchBar.hbs
@@ -1,19 +1,7 @@
-<<<<<<< HEAD
-<div class="quick-search">
-    <form action="" method="post">
-        <input type="text" name="search-bar" class="search-bar" id="search-bar">
-    </form>
-    <label for="search-bar">Quick Search a Country:</label>
-
-    <datalist class="country-results" style="display: block">
-    
-    </datalist>
-=======
-<div id="quick-search flex">
+<div class="quick-search flex">
     <form action="" method="post" autocomplete="off">
         <label for="search-bar">Search :</label>
         <input type="text" name="search-bar" id="search-bar">
     </form>
     <datalist id="country-results"></datalist>
->>>>>>> 1e534e748eaecb281d2257c3c6a07a171e372e9e
 </div>
