--- a/views/partials/searchBar.hbs
+++ b/views/partials/searchBar.hbs
@@ -1,7 +1,7 @@
 <div class="quick-search flex">
     <form action="" method="post" autocomplete="off">
         <label for="search-bar">Search :</label>
-        <input type="text" name="search-bar" id="search-bar">
+        <input type="text" name="search-bar" id="search-bar" class="search-bar">
+        <datalist class="country-results"></datalist>
     </form>
-    <datalist id="country-results"></datalist>
 </div>
