--- a/views/country.hbs
+++ b/views/country.hbs
@@ -30,13 +30,13 @@
         {{/unless}}
         {{#if isLoggedIn}}
         <div class="tips-nav flex">
-            <div class="tips-nav-list">
-                <button class="tips-category active" type="button"><i class="fas fa-wine-glass-alt"></i></button>
-                <button class="tips-category" value="restaurant"><i class="fas fa-utensils"></i></button>
-                <button class="tips-category" value="park"><i class="fas fa-leaf"></i></button>
-                <button class="tips-category" value="monument"><i class="fas fa-eye"></i></button>
-                <button class="tips-category" value="shopping"><i class="fas fa-shopping-bag"></i></button>
-                <button class="tips-category" value="info"><i class="fas fa-info"></i></button>
+            <div class="tips-nav-list" id='{{country._id}}'>
+                <button class="tips-category" title='Bar' value='Bar'><i class="fas fa-wine-glass-alt"></i></button>
+                <button class="tips-category" value="Restaurant"><i class="fas fa-utensils"></i></button>
+                <button class="tips-category" value="Garden"><i class="fas fa-leaf"></i></button>
+                <button class="tips-category" value="Museum"><i class="fas fa-eye"></i></button>
+                <button class="tips-category" value="Shopping"><i class="fas fa-shopping-bag"></i></button>
+                <button class="tips-category" value="Info"><i class="fas fa-info"></i></button>
             </div>
             <div class="tips-nav-add">
                 <button type="button">+</button>
