--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,11 +1,16 @@
-<section class="page user-page flex">
+<section class="page user-page">
     <div class="user-box">
-        <div class="user-header flex">
-            <h2>{{currentUser.username}}</h2>
+        <div class="user-header">
+            <div class="user-header-avatar">
+                <img src="{{currentUser.avatar}}" alt="{{currentUser.username}} avatar">
+            </div>
+            <div class="user-header-username">
+                <h2>{{currentUser.username}}</h2>
+            </div>
         </div>
-        <div class="user-main flex">
+        <div class="user-main">
             <div class="user-main-visited">
-                <h3>Visited</h3>
+                <h3>Visited :</h3>
                 <ul>
                     {{#each currentUser.visited}}
                     <li><a href="/country/{{currentUser._id}}">{{currentUser.name}}</a></li>
@@ -13,7 +18,7 @@
                 </ul>
             </div>
             <div class="user-main-wishlist">
-                <h3>Wishlist</h3>
+                <h3>Wishlist :</h3>
                 <ul>
                     {{#each currentUser.wishlist}}
                     <li><a href="/country/{{currentUser._id}}">{{currentUser.name}}</a></li>
