--- a/views/country.hbs
+++ b/views/country.hbs
@@ -30,14 +30,9 @@
         {{/unless}}
         {{#if isLoggedIn}}
         <div class="tips-nav flex">
-            <div class="tips-nav-list" id='{{country._id}}'>
-                <button class="tips-category" title='Bar' value='Bar'><i class="fas fa-wine-glass-alt"></i></button>
-                <button class="tips-category" value="Restaurant"><i class="fas fa-utensils"></i></button>
-                <button class="tips-category" value="Garden"><i class="fas fa-leaf"></i></button>
-                <button class="tips-category" value="Museum"><i class="fas fa-eye"></i></button>
-                <button class="tips-category" value="Shopping"><i class="fas fa-shopping-bag"></i></button>
-                <button class="tips-category" value="Info"><i class="fas fa-info"></i></button>
-            </div>
+
+            {{> tipsList}}
+
             <div class="tips-nav-add">
                 <button type="button">+</button>
             </div>
