--- a/views/user.hbs
+++ b/views/user.hbs
@@ -31,14 +31,17 @@
     </div>
     <div class="tips-box">
         <div class="tips-nav flex">
-            <div class="tips-nav-list">
+
+        {{> tipsList}}
+
+            {{!-- <div class="tips-nav-list">
                 <button class="tips-category active" type="button"><i class="fas fa-wine-glass-alt"></i></button>
                 <button class="tips-category" type="button"><i class="fas fa-utensils"></i></button>
                 <button class="tips-category" type="button"><i class="fas fa-leaf"></i></button>
                 <button class="tips-category" type="button"><i class="fas fa-eye"></i></button>
                 <button class="tips-category" type="button"><i class="fas fa-shopping-bag"></i></button>
                 <button class="tips-category" type="button"><i class="fas fa-info"></i></button>
-            </div>
+            </div> --}}
         </div>
         <div class="tips-list">
             {{#unless tips}}
