--- a/views/user.hbs
+++ b/views/user.hbs
@@ -13,8 +13,8 @@
                 <h3>Visited</h3>
                 {{> searchBar}}
                 <ul>
-                    {{#each currentUser.visited}}
-                    <li><a href="/country/{{currentUser._id}}">{{currentUser.name}}</a></li>
+                    {{#each user.visited}}
+                    <li><a href="/country/{{this.codeName}}">{{this.name}}</a></li>
                     {{/each}}
                 </ul>
             </div>
@@ -22,8 +22,8 @@
                 <h3>Wishlist</h3>
                 {{> searchBar}}
                 <ul>
-                    {{#each currentUser.wishlist}}
-                    <li><a href="/country/{{currentUser._id}}">{{currentUser.name}}</a></li>
+                    {{#each user.wishlist}}
+                    <li><a href="/country/{{this.codeName}}">{{this.name}}</a></li>
                     {{/each}}
                 </ul>
             </div>
