tips filtered fixed and about me links

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,11 +3,11 @@
     <div class="about-container flex">
         <article class="about-article about-wendy flex">
             <h3>Wendy Evora</h3>
-            <p class="about-info">Hi my name is Wendy !</p>
+            <p class="about-info">Junior Web Developper in the making... Let your faith be bigger than your fears, have faith, success will be near !</p>
             <div class="about-link-box">
-                <a target="_blank" href="">Linkedin</a>
-                <a target="_blank" href="">Github</a>
-                <a target="_blank" href="">Website</a>
+                <a target="_blank" href="https://www.linkedin.com/in/wendy-evora-978653142/">Linkedin</a>
+                <a target="_blank" href="https://github.com/Wendev13">Github</a>
+                <a target="_blank" href="https://wendev13.github.io/FaceQuizz/">Website</a>
             </div>
         </article>
         <article class="about-article about-andrew flex">
