--- a/views/about.hbs
+++ b/views/about.hbs
@@ -4,28 +4,28 @@
         <article class="about-article about-wendy flex">
             <h3>Wendy Evora</h3>
             <p class="about-info">Junior Web Developper in the making... Let your faith be bigger than your fears, have faith, success will be near !</p>
-            <div class="about-link-box">
-                <a target="_blank" href="https://www.linkedin.com/in/wendy-evora-978653142/">Linkedin</a>
-                <a target="_blank" href="https://github.com/Wendev13">Github</a>
-                <a target="_blank" href="https://wendev13.github.io/FaceQuizz/">Website</a>
+            <div class="about-link-box flex">
+                <a target="_blank" href="https://www.linkedin.com/in/wendy-evora-978653142/"><i class="fab fa-linkedin"></i></a>
+                <a target="_blank" href="https://github.com/Wendev13"><i class="fab fa-github"></i></a>
+                <a target="_blank" href="https://wendev13.github.io/FaceQuizz/"><i class="fas fa-gamepad"></i></a>
             </div>
         </article>
         <article class="about-article about-andrew flex">
             <h3>Andrew Nunez</h3>
             <p class="about-info">Hi my name is Andrew !</p>
-            <div class="about-link-box">
-                <a target="_blank" href="">Linkedin</a>
-                <a target="_blank" href="">Github</a>
-                <a target="_blank" href="">Website</a>
+            <div class="about-link-box flex">
+                <a target="_blank" href=""><i class="fab fa-linkedin"></i></a>
+                <a target="_blank" href=""><i class="fab fa-github"></i></a>
+                <a target="_blank" href=""><i class="fas fa-gamepad"></i></a>
             </div>
         </article>
         <article class="about-article about-nina flex">
             <h3>Nina Gautreau</h3>
             <p class="about-info">Gradient and flexbox enthusiast, I also like food and jazz concerts !</p>
-            <div class="about-link-box">
-                <a target="_blank" href="https://www.linkedin.com/in/ninagautreau/">Linkedin</a>
-                <a target="_blank" href="https://github.com/Gorlanova">Github</a>
-                <a target="_blank" href="https://gorlanova.github.io/project-01-game-minesweeper/">Game</a>
+            <div class="about-link-box flex">
+                <a target="_blank" href="https://www.linkedin.com/in/ninagautreau/"><i class="fab fa-linkedin"></i></a>
+                <a target="_blank" href="https://github.com/Gorlanova"><i class="fab fa-github"></i></a>
+                <a target="_blank" href="https://gorlanova.github.io/project-01-game-minesweeper/"><i class="fas fa-gamepad"></i></a>
             </div>
         </article>
     </div>
