--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/scroll-home.css">
+<link rel="stylesheet" href="/css/home.css">
 {{#unless isLoggedIn}}
 <div id="popupDiv" class="home-popup flex">
     <div class="popup-top flex">
