--- a/public/css/about.css
+++ b/public/css/about.css
@@ -17,6 +17,13 @@
     margin-bottom: 1.5rem;
 }
 
+.about-link-box{
+    font-size: 1.5em;
+    width: 60%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 @media screen and (max-width: 1020px){
     .about-container{
         flex-direction: column;
