--- a/views/about.hbs
+++ b/views/about.hbs
@@ -12,16 +12,16 @@
         </article>
         <article class="about-article about-andrew flex">
             <h3>Andrew Nunez</h3>
-            <p class="about-info">Hi my name is Andrew !</p>
+            <p class="about-info">Boom ! I like beignets, je parle français très bien, and I've never been punched in the face !</p>
             <div class="about-link-box flex">
-                <a target="_blank" href=""><i class="fab fa-linkedin"></i></a>
-                <a target="_blank" href=""><i class="fab fa-github"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/andrew-bibby/"><i class="fab fa-linkedin"></i></a>
+                <a target="_blank" href="https://github.com/andrewnunezbibby"><i class="fab fa-github"></i></a>
                 <a target="_blank" href=""><i class="fas fa-gamepad"></i></a>
             </div>
         </article>
         <article class="about-article about-nina flex">
             <h3>Nina Gautreau</h3>
-            <p class="about-info">Gradient and flexbox enthusiast, I also like food and jazz concerts !</p>
+            <p class="about-info">I like food, gradients, flexboxes, and I hate coriander. I've thrown beignets at Andrew's face and he liked it !</p>
             <div class="about-link-box flex">
                 <a target="_blank" href="https://www.linkedin.com/in/ninagautreau/"><i class="fab fa-linkedin"></i></a>
                 <a target="_blank" href="https://github.com/Gorlanova"><i class="fab fa-github"></i></a>
