--- a/views/guide.hbs
+++ b/views/guide.hbs
@@ -24,7 +24,7 @@
         <div class="guide-item">
             <article class="guide-article step3 flex">
                 <div class="guide-img">
-                    
+                    <img src="/assets/step3.png" alt="User Page">
                 </div>
                 <div class="guide-text">
                     Then you have your own dashboard, your own special page just for you, where you can update countries you went to / will go to, access the tips you've written, and look at your username in a very cool font.
