--- a/public/css/guide.css
+++ b/public/css/guide.css
@@ -26,12 +26,16 @@
     text-align: center;
 }
 
-@media screen and (max-width: 900px){
+@media screen and (max-width: 1000px){
     .guide-article{
         flex-direction: column;
     }
 
     .guide-text{
         width: 100%;
+    }
+
+    .guide-img{
+        width: 90%;
     }
 }
