--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,7 @@
 @import "./signup.css";
 
 * {
-    border: 1px solid #ff00ff;
+    /* border: 1px solid #ff00ff; */
     box-sizing: border-box;
     vertical-align: baseline;
 }
@@ -88,12 +88,4 @@ button:focus {
 
 button i{
     pointer-events: none;
-}
-
-.visited-item{
-    color: purple
-}
-
-.wishlist-item{
-    color: violet;
 }
