--- a/views/about.hbs
+++ b/views/about.hbs
@@ -16,7 +16,7 @@
             <div class="about-link-box flex">
                 <a target="_blank" href="https://www.linkedin.com/in/andrew-bibby/"><i class="fab fa-linkedin"></i></a>
                 <a target="_blank" href="https://github.com/andrewnunezbibby"><i class="fab fa-github"></i></a>
-                <a target="_blank" href=""><i class="fas fa-gamepad"></i></a>
+                <a target="_blank" href="https://andrewnunezbibby.github.io/le-devenir-project-1/"><i class="fas fa-gamepad"></i></a>
             </div>
         </article>
         <article class="about-article about-nina flex">
