--- a/views/about.hbs
+++ b/views/about.hbs
@@ -12,7 +12,7 @@
         </article>
         <article class="about-article about-andrew flex">
             <h3>Andrew Nunez</h3>
-            <p class="about-info">Hi my name is Andrew !</p>
+            <p class="about-info">Hi my name is Andrew ! Looking for French citizenship. Lets get married.</p>
             <div class="about-link-box flex">
                 <a target="_blank" href=""><i class="fab fa-linkedin"></i></a>
                 <a target="_blank" href=""><i class="fab fa-github"></i></a>
