--- a/views/home.hbs
+++ b/views/home.hbs
@@ -20,5 +20,5 @@
     <div class="home-search">
         {{> searchBar}}
     </div>
-    <div id="map"></div>
+    <div class="flex" id="map"></div>
 </section>
