--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <header class="flex">
     <nav class="header-nav flex">
-        <a class="header-title" href="/">Worldmap</a class="header-title">
+        <a class="header-title" href="/">Worldmapp</a class="header-title">
         <ul class="nav-list flex">
             <li><a href="/">Home</a></li>
             <li><a href="/guide">Guide</a></li>
