--- a/views/country.hbs
+++ b/views/country.hbs
@@ -90,7 +90,7 @@
             {{#each tips}}
             <hr>
             <article class="tip-container flex">
-                <div class="tip-head">
+                <div class="tip-head-country">
                     <h3>{{this.name}}</h3> <p>({{this.category}})</p>
                 </div>
                 <p class="tip-location">{{this.city}}, {{this.country.name}}</p>
