--- a/views/country.hbs
+++ b/views/country.hbs
@@ -10,8 +10,8 @@
                     <h2>{{country.name}}</h2>
                 </div>
                 <div class="country-header-status">
-                    <button type="button" id="country-status-visited" data-country-id="{{country.codeName}}" class="country-status-visited"><i class="fas fa-star"></i> Visited</button>
-                    <button type="button" id="country-status-wishlist" data-country-id="{{country.codeName}}" class="country-status-wishlist"><i class="fas fa-heart"></i> Wishlist</button>
+                    <button type="button" id="country-status-visited" data-visited-id="{{country.codeName}}" class="country-status-visited"><i class="fas fa-star"></i> Visited</button>
+                    <button type="button" id="country-status-wishlist" data-wishlist-id="{{country.codeName}}" class="country-status-wishlist"><i class="fas fa-heart"></i> Wishlist</button>
                 </div>
             </div>
         </div>
